--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,16 @@
 @import "settings";
 @import "foundation";
 
+@import "compass";
+@import "compass/css3";
+@import "compass/typography";
+
+
+
+@import "sitestyles";
+
+
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
