fixed js, add more styles

--- a/scss/_headerstyles.scss
+++ b/scss/_headerstyles.scss
@@ -1,16 +1,19 @@
 header{
 	@include grid-row();
 	.brp-logo{
-		@include grid-column(4,$center:true);
+		@include grid-column(8,$center:true);
 	}
 	nav{
 		@include grid-column(8, $center:true);
+		margin-top:15px;
+		margin-bottom:25px;
 		ul{
-			@include grid-column(8, $center:true);
+			@include grid-column(12, $center:true);
 			@include inline-block-list(5px);
 			li{
 				@include no-bullet;
-		      	@include border-radius(5px);
+				padding:20px;
+				font-size: 1.5em;
 			}
 		}
 	}
