--- a/scss/app.scss
+++ b/scss/app.scss
@@ -11,6 +11,9 @@
 @import "sitestyles";
 @import "headerstyles";
 @import "indexstyles";
+@import "about";
+@import "meet";
+@import "service";
 @import "footer";
 
 // Or selectively include components
