fixed top-bar, added splash page, fixed layout & style issues

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,10 @@
 footer{
 	@include grid-row(12);
 	.footerlinks{
-		@include grid-column(11, $center:true);
-
+		@include grid-column(12, $center:true);
+		p{
+			font-size:15px;
+		}
 	}
 	.copywrite{
 		@include grid-row();
