--- a/scss/_indexstyles.scss
+++ b/scss/_indexstyles.scss
@@ -1,3 +1,34 @@
+// Splash page
+.splash{
+	background: $back1;
+	background-size: cover;
+	width:100%;
+	height: 100%;
+	position: fixed;
+	top:0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 9999;
+	min-height: 360px;
+	.imgRow{
+		@include grid-row();
+		.imgCol{
+			@include grid-column(12, $center:true);
+		}
+	}
+	.butRow{
+		@include grid-row();
+		.butCol{
+			@include grid-column(12, $center:true);
+			text-align: center;
+			h1{
+				color:#fff;
+			}
+		}
+	}
+}
+
 
 // using Slick slider 
 .slider{
@@ -7,13 +38,13 @@
 		display:none;
 	}		
 	.sliderimages{
-		@include grid-column(8, $center:true);
+		@include grid-column(10, $center:true);
 	}
 }
 
 // index body content
 .intro{
-	@inculde grid-row();
+	@include grid-row();
 	div{
 		@include grid-row();
 		h3{
@@ -35,16 +66,17 @@
 	.about{
 		@include grid-column(6);
 		.aboutimg{
-			@include rotate(45deg);
+			padding-top:10px;
 			img{
+				max-width: 100%;
 				padding-bottom:2em; //32px	
 				padding-top:2em; //32px
-				@include rotate(-45deg);
 			}
 		}
 	}
 	.aboutlist{
-		@innclude grid-column(6);
+		@include grid-column(6);
+		padding-top: 25px;
 		@media only screen and (max-width: 800px) {
 		display:none;
 		}		
