fixed footer and started adding accordion

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,3 +1,26 @@
 .container{
 	@include grid-row();
+	.accord{
+		@media only screen and (max-width: 850px) {
+			@include accordion-container;
+		}
+		div:nth-child(1){
+			@include accordion-navigation;
+			div{
+				@include accordion-content;
+			}
+		}
+		div:nth-child(2){
+			@include accordion-navigation;
+			div{
+				@include accordion-content;
+			}
+		}
+		div:nth-child(3){
+			@include accordion-navigation;
+			div{
+				@include accordion-content;
+			}
+		}
+	}
 }
