--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,17 @@
 footer{
-	@include grid-row(12);
-	.footerlinks{
-		@include grid-column(12, $center:true);
-		p{
-			font-size:15px;
+	width:100%;
+	background: $footer;
+	.footCont{
+		@include grid-row(12);
+	
+		.footerlinks{
+			@include grid-column(12, $center:true);
+			p{
+				font-size:15px;
+			}
 		}
-	}
-	.copywrite{
-		@include grid-row();
+		.copywrite{
+			@include grid-row();
+		}
 	}
 }
