--- a/scss/_meet.scss
+++ b/scss/_meet.scss
@@ -1,7 +1,14 @@
 .meetimg{
 	@include grid-column(6);
+	@media only screen and (max-width: 850px){
+		@include grid-column(12);
+	}
 }
 
 .meetpts{
 	@include grid-column(6);
+	@media only screen and (max-width: 850px){
+		display: none;
+	}
 }
+
