--- a/scss/_indexstyles.scss
+++ b/scss/_indexstyles.scss
@@ -60,17 +60,23 @@
 	}
 }
 
+.lineBreakBlk{
+	hr{
+		border-color:$font;
+	}
+}
 //about section
 .aboutsection{
 	@include grid-row();
 	.about{
 		@include grid-column(6);
 		.aboutimg{
-			padding-top:10px;
+			width:250px;
+			height:250px;
+			border: solid 3px $borderImg;
+			border-radius: 5px;
 			img{
 				max-width: 100%;
-				padding-bottom:2em; //32px	
-				padding-top:2em; //32px
 			}
 		}
 	}
