add jquery code for accordion, book.php, submission.php and style rules

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,34 +1,8 @@
 .container{
 	@include grid-row();
-	.accord{
+	.hiddenCont{
 		@media only screen and (max-width: 850px) {
-			@include accordion-container;
-		}
-		@media only screen and (max-width: 850px){
-			div:nth-child(1){
-				@include accordion-navigation;
-				div{
-					@include accordion-content;
-				}
-			}
-		}
-
-		@media only screen and (max-width: 850px){
-			div:nth-child(2){
-				@include accordion-navigation;
-				div{
-					@include accordion-content;
-				}
-			}
-		}
-
-		@media only screen and (max-width: 850px){
-			div:nth-child(3){
-				@include accordion-navigation;
-				div{
-					@include accordion-content;
-				}
-			}
+			display:none;
 		}
 	}
 }
