--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,6 +14,7 @@
 @import "about";
 @import "meet";
 @import "service";
+@import "contact";
 @import "footer";
 
 // Or selectively include components
