added border-box and box shadow styles to main body container

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,8 +1,25 @@
 .container{
 	@include grid-row();
-	.hiddenCont{
-		@media only screen and (max-width: 850px) {
-			display:none;
+	border: 2px solid #999;
+	box-shadow: 1px 1px 0px 0px #999,
+	 2px 2px 0px 0px #999,
+	 3px 3px 0px 0px #999,
+	 4px 4px 0px 0px #999,
+	 5px 5px 0px 0px #999,
+	 6px 6px 0px 0px #999,
+	 7px 7px 0px 0px #999,
+	 8px 8px 0px 0px #999;
+	@media only screen and (max-width: 850px) {
+		h4{
+			background-color: gray;
+			border: 2px solid #FF0013d;
+			border-radius: 5px;
+			padding: 7px;
+			margin-top: 2px;
+			margin-bottom: 2px;
+			.hiddenCont{
+				display:none;
+			}
 		}
 	}
 }
