--- a/scss/_sitestyles.scss
+++ b/scss/_sitestyles.scss
@@ -1,5 +1,5 @@
 
-// Custom Variables 
+// Custom Variables // 
 
 $font:#000;
 $font2:#FFF;
@@ -16,7 +16,7 @@ html, body{
 	color: $font;
 	background:$back1;
 	//@include background-image(linear-gradient(90deg, $back1 0%, $back1 50%, $back2 50.01%, $back2 100%));
-	background: url("http://www.stripemania.com/cache/25-25-45-1-181818-1-262622-DDEE1E-DDEE1E-DDEE1E-DDEE1E-262622-78D316-78D316-78D316-78D316-no-yes-yes-yes-yes-.png");
+	background: url("red");
 	background-size: 25px 25px;
 	font-family: 'Lato', sans-serif;
 	box-sizing: border-box;
