--- a/scss/_sitestyles.scss
+++ b/scss/_sitestyles.scss
@@ -14,9 +14,7 @@ $footer:#272721;
 html, body{
 	width:100%;
 	color: $font;
-	background:$back1;
-	//@include background-image(linear-gradient(90deg, $back1 0%, $back1 50%, $back2 50.01%, $back2 100%));
-	background: url("red");
+	background: url("../images/bg.jpg");
 	background-size: 25px 25px;
 	font-family: 'Lato', sans-serif;
 	box-sizing: border-box;
@@ -50,4 +48,12 @@ h1, h2, h3, h4, h5, h6{
 	@include grid-row();
 	background:$contBack;
 	padding:40px;
+	  box-shadow: 1px 1px 0px 0px #999, 
+	  			  2px 2px 0px 0px #999, 
+	  			  3px 3px 0px 0px #999, 
+	  			  4px 4px 0px 0px #999, 
+	  			  5px 5px 0px 0px #999, 
+	  			  6px 6px 0px 0px #999, 
+	  			  7px 7px 0px 0px #999, 
+	  			  8px 8px 0px 0px #999;
 }
